--- a/src/main/webapp/css/jumbotron-narrow.css
+++ b/src/main/webapp/css/jumbotron-narrow.css
@@ -79,6 +79,27 @@ body {
     float: right;
 }
 
+.search {
+    float:right;
+    /*font-weight:normal;*/
+    /*display: block;*/
+    height: 20px;
+    /*margin-top: 1px;*/
+    padding: 4px 6px;
+    /*font-size: 14px;*/
+    /*line-height: 1.42857143;*/
+    color: #555;
+    background-color: #fff;
+    /*background-image: none;*/
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
+    /*box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
+    /*-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;*/
+    /*-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+    /*transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+}
+
 .imagediv {
     float: right;
     margin-left: 5px;
