搬迁到蜂巢,并增加域名moviehell.net

--- a/src/main/webapp/css/jumbotron-narrow.css
+++ b/src/main/webapp/css/jumbotron-narrow.css
@@ -24,6 +24,14 @@ body {
     line-height: 50px;
 }
 
+.m-active {
+    background-color: #cccccc;
+}
+
+.cursor {
+    cursor:pointer;
+}
+
 /* Custom page footer */
 .footer {
     padding-top: 19px;
