--- a/src/main/webapp/css/jumbotron-narrow.css
+++ b/src/main/webapp/css/jumbotron-narrow.css
@@ -2,6 +2,7 @@
 body {
     padding-top: 20px;
     padding-bottom: 20px;
+    font-family: "Helvetica Neue", Helvetica, Microsoft Yahei, Hiragino Sans GB, WenQuanYi Micro Hei, sans-serif;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -14,8 +15,8 @@ body {
 
 /* Custom page header */
 .header {
-    padding-bottom: 20px;
-    border-bottom: 1px solid #e5e5e5;
+    padding-bottom: 10px;
+    /*border-bottom: 1px solid #e5e5e5;*/
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
@@ -133,10 +134,37 @@ body {
     }
     /* Space out the masthead */
     .header {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
         border-bottom: 0;
     }
+}
+
+.moviehell-icon {
+    line-height:38px; float:right; padding:2px 8px; color:#fff; font-size:18px;  background:#00BFFF;
+    /*position:fixed;*/
+    position:fixed; right:0%; top:50%;
+    transition:All 0.4s ease-in-out;
+    -webkit-transition:All 0.4s ease-in-out;
+    -moz-transition:All 0.4s ease-in-out;
+    -o-transition:All 0.4s ease-in-out;
+}
+.moviehell-icon:hover {
+    text-decoration:none;
+    transform:rotate(360deg);
+    -webkit-transform:rotate(360deg);
+    -moz-transform:rotate(360deg);
+    -o-transform:rotate(360deg);
+    -ms-transform:rotate(360deg);
+}
+.moviehell-icon:link
+{
+    text-decoration:none;
+}
+.moviehell-icon:visited
+{
+    color:#fff;
+    text-decoration:none;
 }
