增加煎蛋传送门

--- a/src/main/webapp/css/jumbotron-narrow.css
+++ b/src/main/webapp/css/jumbotron-narrow.css
@@ -168,3 +168,31 @@ body {
     color:#fff;
     text-decoration:none;
 }
+
+.jandan-icon {
+    line-height:38px; float:right; padding:2px 8px; color:#000; font-size:18px;  background:#EBE700;
+    /*position:fixed;*/
+    position:fixed; right:0%; top:40%;
+    transition:All 0.4s ease-in-out;
+    -webkit-transition:All 0.4s ease-in-out;
+    -moz-transition:All 0.4s ease-in-out;
+    -o-transition:All 0.4s ease-in-out;
+
+}
+.jandan-icon:hover {
+    text-decoration:none;
+    transform:rotate(360deg);
+    -webkit-transform:rotate(360deg);
+    -moz-transform:rotate(360deg);
+    -o-transform:rotate(360deg);
+    -ms-transform:rotate(360deg);
+}
+.jandan-icon:link
+{
+    text-decoration:none;
+}
+.jandan-icon:visited
+{
+    color:#fff;
+    text-decoration:none;
+}
